--- a/DockerCompose/docker-compose.yml
+++ b/DockerCompose/docker-compose.yml
@@ -1,19 +1,15 @@
-version: '3.9'
-
+version: "3.9"
 services:
   user-api:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
+      - "8000:80"
     depends_on: 
-      - db
-  db:
-    image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
+        - ms-sql-server
+  ms-sql-server:
+    image: "mcr.microsoft.com/mssql/server:2017-latest-ubuntu"
     environment:
-      SA_PASSWORD: "Password2021"
+      MSSQL_SA_PASSWORD: "PasSword2021!"
       ACCEPT_EULA: "Y"
-      MSSQL_PID: Express
-    ports:
-    - "1433:1433"
